Fixes not_followed_by combinator, not working without backtracking

--- a/README
+++ b/README
@@ -8,6 +8,6 @@ Pure functional joy.
  Inspired by
 -------------
 
-- Monadic parser combinators, Graham Hutton and Erik Meijer
-- PCL: Parsec-style parsers for OCaml
+- Monadic Parser Combinators, Graham Hutton and Erik Meijer
+- pcl: Parsec-style parsers for OCaml
 - Parsec Haskell library
